// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CategoriesHighlights /> should match snapshot Rectangular 1`] = `
<div
  class="rectangularCategoriesHighlights relative"
>
  <div
    class="flex flex-row flex-wrap items-center justify-center"
  >
    <div
      class="flex flex-row flex-wrap items-center justify-center"
    >
      <div
        class="rectangularCard shadow-1 ma1"
      >
        <div>
          <img
            alt=""
            class="rectangularCardImage"
            src="[object Object]"
          />
        </div>
      </div>
      <div
        class="rectangularCard shadow-1 ma1"
      >
        <div>
          <img
            alt=""
            class="rectangularCardImage"
            src="[object Object]"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CategoriesHighlights /> should match snapshot Squared 1`] = `
<div
  class="squaredCategoriesHighlights relative"
>
  <div
    class="flex flex-row flex-wrap items-center justify-center"
  >
    <div
      class="flex flex-row flex-wrap items-center justify-center"
    >
      <div
        class="squaredCard shadow-1 ma1"
      >
        <div>
          <img
            alt=""
            class="squaredCardImage"
            src="[object Object]"
          />
        </div>
      </div>
      <div
        class="squaredCard shadow-1 ma1"
      >
        <div>
          <img
            alt=""
            class="squaredCardImage"
            src="[object Object]"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
